name:                twit
version:             0.0
license:             PublicDomain
author:              Alex Parent
maintainer:          alexparent@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable twit
  main-is:             Main.hs
  build-depends:    base >=4.6 && <4.7, conduit >= 1.2, stm-conduit, text >= 1.2, time >= 1.4, aeson,
                    authenticate-oauth, http-conduit, bytestring, transformers, network
  ghc-options: -Wall
  default-language:    Haskell2010
